tests/paczka1/fuzzy1/16918098.err
Error in line 7: XOh5SAhr A364 57,4
Error in line 24: Ypqda9UYIu S685 34,6
